--- a/charts/platform-ui/values.openapiv3_schema.yaml
+++ b/charts/platform-ui/values.openapiv3_schema.yaml
@@ -457,6 +457,9 @@ properties:
         - SelfHostedProduction
         - SelfHostedDemo
         - OnpremDemo
+        - SelfHostedProductionAWS
+        - SelfHostedProductionAZURE
+        - SelfHostedProductionGCP
         type: string
       domain:
         type: string
