--- a/charts/ace-installer/values.openapiv3_schema.yaml
+++ b/charts/ace-installer/values.openapiv3_schema.yaml
@@ -5,6 +5,9 @@ properties:
     - SelfHostedProduction
     - SelfHostedDemo
     - OnpremDemo
+    - SelfHostedProductionAWS
+    - SelfHostedProductionAZURE
+    - SelfHostedProductionGCP
     type: string
   fullnameOverride:
     type: string
