--- a/charts/ace/templates/platform/setup-job.yaml
+++ b/charts/ace/templates/platform/setup-job.yaml
@@ -52,6 +52,9 @@ spec:
             - --enable-service-backend
             {{- end }}
             {{- end }}
+            {{- if .Values.clusterCreateInfo.clusterName }}
+            - --create-capi-cluster
+            {{- end }}
           # ports:
           #   - name: http
           #     containerPort: 3000
