--- a/charts/ace/values.openapiv3_schema.yaml
+++ b/charts/ace/values.openapiv3_schema.yaml
@@ -1917,6 +1917,63 @@ properties:
       primaryColor:
         type: string
     type: object
+  capi:
+    properties:
+      aws:
+        properties:
+          accessKeyID:
+            type: string
+          secretAccessKey:
+            type: string
+        required:
+        - accessKeyID
+        - secretAccessKey
+        type: object
+      azure:
+        properties:
+          clientID:
+            type: string
+          clientSecret:
+            type: string
+          subscriptionID:
+            type: string
+          tenantID:
+            type: string
+        required:
+        - clientID
+        - clientSecret
+        - subscriptionID
+        - tenantID
+        type: object
+      createOptions:
+        properties:
+          CIDRRange:
+            type: string
+          clusterName:
+            type: string
+          kuberenetesVersion:
+            type: string
+          projectID:
+            type: string
+          region:
+            type: string
+        required:
+        - CIDRRange
+        - clusterName
+        - kuberenetesVersion
+        - region
+        type: object
+      googleCloud:
+        properties:
+          projectID:
+            type: string
+          serviceAccount:
+            type: string
+        required:
+        - projectID
+        - serviceAccount
+        type: object
+    type: object
   cluster-ui:
     properties:
       affinity:
@@ -4348,6 +4405,9 @@ properties:
             - SelfHostedProduction
             - SelfHostedDemo
             - OnpremDemo
+            - SelfHostedProductionAWS
+            - SelfHostedProductionAZURE
+            - SelfHostedProductionGCP
             type: string
           domain:
             type: string
@@ -18488,6 +18548,9 @@ properties:
             - SelfHostedProduction
             - SelfHostedDemo
             - OnpremDemo
+            - SelfHostedProductionAWS
+            - SelfHostedProductionAZURE
+            - SelfHostedProductionGCP
             type: string
           domain:
             type: string
