--- a/charts/ace/values.yaml
+++ b/charts/ace/values.yaml
@@ -461,3 +461,29 @@ selfManagement:
   import: true
   enableMonitoring: true
   enableServiceBackend: true
+
+# capi related info
+capa:
+  cred:
+    accessToken: ""
+    secretKey: ""
+
+capg:
+  cred:
+    projectId: ""
+    serviceAccount: ""
+
+capz:
+  cred:
+    subscriptionId: ""
+    tenantId: ""
+    clientId: ""
+    clientSecret: ""
+  
+
+clusterCreateInfo:
+  clusterName: ""
+  region: ""
+  cidrRange: ""
+  projectId: ""
+  kubernetesVersion: ""
