--- a/schema/ace-options/values.openapiv3_schema.yaml
+++ b/schema/ace-options/values.openapiv3_schema.yaml
@@ -122,6 +122,63 @@ properties:
       primaryColor:
         type: string
     type: object
+  capi:
+    properties:
+      aws:
+        properties:
+          accessKeyID:
+            type: string
+          secretAccessKey:
+            type: string
+        required:
+          - accessKeyID
+          - secretAccessKey
+        type: object
+      azure:
+        properties:
+          clientID:
+            type: string
+          clientSecret:
+            type: string
+          subscriptionID:
+            type: string
+          tenantID:
+            type: string
+        required:
+          - clientID
+          - clientSecret
+          - subscriptionID
+          - tenantID
+        type: object
+      createOptions:
+        properties:
+          CIDRRange:
+            type: string
+          clusterName:
+            type: string
+          kuberenetesVersion:
+            type: string
+          projectID:
+            type: string
+          region:
+            type: string
+        required:
+          - CIDRRange
+          - clusterName
+          - kuberenetesVersion
+          - region
+        type: object
+      googleCloud:
+        properties:
+          projectID:
+            type: string
+          serviceAccount:
+            type: string
+        required:
+          - projectID
+          - serviceAccount
+        type: object
+    type: object
   cluster-ui:
     properties:
       enabled:
@@ -238,6 +295,9 @@ properties:
           - SelfHostedProduction
           - SelfHostedDemo
           - OnpremDemo
+          - SelfHostedProductionAWS
+          - SelfHostedProductionAZURE
+          - SelfHostedProductionGCP
         type: string
       hostedDomain:
         type: string
@@ -1845,6 +1905,7 @@ required:
   - accounts-ui
   - billing
   - branding
+  - capi
   - cluster-ui
   - context
   - deploy-ui
