--- a/charts/ace/templates/platform/setup-job.yaml
+++ b/charts/ace/templates/platform/setup-job.yaml
@@ -43,15 +43,6 @@ spec:
             - --create-nats-stream
             {{- end }}
             - --importer-service-account={{ include "appscode.serviceAccountName" . }}-importer
-            {{- if .Values.selfManagement.import }}
-            - --self-import
-            {{- if .Values.selfManagement.enableMonitoring }}
-            - --enable-monitoring
-            {{- end }}
-            {{- if .Values.selfManagement.enableServiceBackend }}
-            - --enable-service-backend
-            {{- end }}
-            {{- end }}
           # ports:
           #   - name: http
           #     containerPort: 3000
@@ -117,6 +108,10 @@ spec:
               mountPath: /data/b3/conf/app.ini
               subPath: app.ini
             {{- end }}
+            {{- if (include "settings.setupConfigSecretName" .) }}
+            - name: setup-config
+              mountPath: /data/b3/conf/setup-config
+            {{- end }}
             {{- if (include "settings.natsSecretName" .) }}
             - name: nats-cred
               mountPath: {{ .Values.settings.nats.mountPath }}
@@ -136,6 +131,12 @@ spec:
           emptyDir: {}
         {{- with $secretName := (include "settings.platformConfigSecretName" .) }}
         - name: config
+          secret:
+            defaultMode: 420
+            secretName: {{ $secretName }}
+        {{- end }}
+        {{- with $secretName := (include "settings.setupConfigSecretName" .) }}
+        - name: setup-config
           secret:
             defaultMode: 420
             secretName: {{ $secretName }}
