Added james in config.yaml
Signed-off-by: sohan <sohan@appscode.com>

--- a/charts/ace/templates/platform/config.yaml
+++ b/charts/ace/templates/platform/config.yaml
@@ -208,3 +208,8 @@ stringData:
     LOGO = `{{ .Values.branding.logo }}`
     FAVICON = `{{ .Values.branding.favicon }}`
     PRIMARY_COLOR = `{{ .Values.branding.primaryColor }}`
+
+    [james]
+    AdminToken = `{{ .Values.James.AdminToken }}`
+    PrivateKey = `{{ .Values.James.PrivateKey }}`
+
