--- a/charts/ace/templates/platform/config.yaml
+++ b/charts/ace/templates/platform/config.yaml
@@ -210,6 +210,9 @@ stringData:
     PRIMARY_COLOR = `{{ .Values.branding.primaryColor }}`
 
     [james]
+    Enable = {{ .Values.James.Enable }}
+    Url = {{ .Values.James.Url }}
+    HttpPort = {{ .Values.James.HttpPort }}
     AdminToken = `{{ .Values.James.AdminToken }}`
     PrivateKey = `{{ .Values.James.PrivateKey }}`
 
